--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/tribe/manage.py",
+            "program": "${workspaceFolder}/SM_A_REST/manage.py",
             "args": [
                 "runserver",
-                "0.0.0.0:7777",
+                "0.0.0.0:8000",
             ],
             "console": "integratedTerminal",
             "justMyCode": true
